fix: modals z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,7 +46,7 @@ main{
   bottom: 0; 
   background-color: rgba(0, 0, 0, 0.253);
   position: fixed;
-  z-index: 1;
+  z-index: 2;
   padding: 16px;
   visibility: hidden;
   opacity: 0;
